# tensoria

./: Cargo.toml  README.md
src/: arr.rs  array.rs  error.rs  experimental.rs  lib.rs  optim.rs  session.rs  tensor.rs  traits.rs  var.rs
src/cpu/: executor.rs
src/gpu/: array.rs  context.rs  gpu_array.rs  mod.rs  op_type.rs
src/gpu/wgsl/: add.wgsl  binop.wgsl  matmul.wgsl  mul_backward.wgsl  reduce_to_scalar.wgsl  slice.wgsl
src/nn/: mod.rs
src/nn/functions/: mod.rs
src/wgpu/: executor.rs  experimental.rs  mod.rs  tensor.rs
src/wgpu/op/: add.rs  leaf.rs  matmul.rs  mod.rs  mul.rs
src/wgpu/wgsl/: add.wgsl  matmul.wgsl  mul.wgsl
