[package]
name = "ss_tensoria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
ndarray = { version = "0.15.6" }
wgpu = { version = "0.18.0" }
bytemuck = "1.14.0"
pollster = "0.3.0"
flume = "0.11.0"