[package]
name = "tensoria"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
ndarray = { version = "0.15.6" }
wgpu = { version = "0.18.0", features = ["wgsl", "vulkan-portability"] }
bytemuck = "1.14.0"
pollster = "0.3.0"
flume = "0.11.0"
include_dir = "0.7.3"
tera = "1.19.1"
rand = "0.8.5"
lazy_static = "1.4.0"
num-traits = "0.2.17"
num-integer = "0.1.45"